[package]
name = "deviz"
version = "0.1.2"
authors = ["Brandon Pickering"]
edition = "2018"
license = "MIT"
description = "Provides access to a VS Code extension for displaying structured program output"
repository = "https://github.com/branpk/deviz"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
